--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -28,8 +29,13 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
+              <form method="GET" action="/urls/<%= url %>">
+                <button type="submit" class="btn btn-warning"> Edit </button>
+              </form>
+            </td>
+            <td>
               <form method="POST" action="/urls/<%= url %>/delete">
-                <button type="sumbit" class="btn btn-danger"> Delete </button>
+                <button type="submit" class="btn btn-danger"> Delete </button>
               </form>
             </td>
           </tr>
