--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,8 +15,23 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-    <div class="card-footer text-muted"></div>
   </div>
+<!-- Update an URL -->
+  <div class="card text-center">
+    <div class="card-header">
+      <div class="card-body">
+        <h1 class="card-title">Update</h1>
+        <form class="form-inline justify-content-center" action="/urls/<%= shortURL %>" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">Enter a new URL :</label>
+            <input class="form-control" type="text" name="longURL" placeholder="http://www.theNew.url" style="width: 300px; margin: 1em; ">
+            <button type="submit" class="btn btn-primary">Update</button>
+          </div>
+        </div>
+        </form>
+    </div>
+</div>
+
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
