cookie-parser installed and sign-in form added

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -5,10 +5,14 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+        <form class="form-inline-center" action="/login" method="POST">
+          <input  type="text" placeholder="Username" name="username">
+          <button  type="submit" class="btn btn-primary">Sign In</button>
+        </form>
   </nav>
 </header>
