Registration Handler created - cookie saved with user_ID and randomUserID

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
   
     <%- include('partials/_header') %>
   
-    <form action="POST">
+    <form class="form" action="/register" method="POST">
       <div class="container">
         <h1>Register</h1>
         <p>Please fill in this form to create an account.</p>
