Refactoring the Login Route

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
         <p>Please fill in this form to login to the account.</p>
         <hr>
     
-        <label for="email"><b>Email</b></label>
+        <label for="email"><b>Email address</b></label>
         <input type="email" placeholder="Enter Email" name="email" id="email" required>
     
         <label for="password"><b>Password</b></label>
