--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,11 +11,11 @@
   
     <form class="form" action="/register" method="POST">
       <div class="container">
-        <h1>Register</h1>
+        <h1>Create an Account</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
     
-        <label for="email"><b>Email</b></label>
+        <label for="email"><b>Email address</b></label>
         <input type="email" placeholder="Enter Email" name="email" id="email" required>
     
         <label for="password"><b>Password</b></label>
