Users can only their own links and can only Edit or Delete their own URLs

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,7 +14,7 @@
     <%- include('partials/_header') %>
     
     <main style="margin: 2em;">
-    <% if (user === undefined)  {%> 
+    <% if (!user)  {%> 
       <div>
         <p class="aligncenter"></p>
         <img src="https://sayingimages.com/wp-content/uploads/2021/04/calm-down-okay-okay-meme.jpg" alt="Relax" class="center">
