--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,42 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>URL - TinyApp Registeration Form</title>
 </head>
 <body>
-  
-    <%- include('partials/_header') %>
-  
+  <%- include('partials/_header') %>
+  <main style="margin: 1em;">
     <form class="form" action="/register" method="POST">
       <div class="container">
         <h1>Create an Account</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
-    
         <label for="email"><b>Email address</b></label>
-        <input type="email" placeholder="Enter Email" name="email" id="email" required>
-    
+        <input type="email" placeholder="Enter Email" name="email" id="email">
         <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" id="password" required>
-    
-        <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required> -->
+        <input type="password" placeholder="Enter Password" name="password" id="password">
         <hr>
-        <!-- <button type="submit" class="registerbtn">Register</button> -->
         <button type="submit" class="btn btn-warning"> Register </button>
       </div>
-    
-      <!-- <div class="container signin">
-        <p>Already have an account? <a href="#">Sign in</a>.</p>
-      </div> -->
     </form>
-
+  </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
-
