--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -6,54 +6,42 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>TinyApp</title>
+  <title style="font-weight: 800;">TinyApp</title>
 </head>
-
 <body>
-  
-    <%- include('partials/_header') %>
-    
-    <main style="margin: 2em;">
-    <% if (!user)  {%> 
-      <div>
-        <p class="aligncenter"></p>
-        <img src="https://sayingimages.com/wp-content/uploads/2021/04/calm-down-okay-okay-meme.jpg" alt="Relax" class="center">
-      </p>
-      <p>Login or register to be able continue working on links in TinyApp.</p> 
-      <a href="/login" class="btn btn-warning">Login</a>
-      <a href="/register" class="btn btn-warning">Register</a>
-    </div>
-    <% } else { %> 
-        <h3>My URLs</h3>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Short URL</th>
-              <th scope="col">Long URL</th>
-              <th scope="col">Edit</th>
-              <th scope="col">Delete</th>
-            </tr>
-          </thead>
-          <tbody>
+  <%- include('partials/_header', {user}) %>
+  <main style="margin: 1em;">
+    <h3>My URLs</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Short URL</th>
+          <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
+        </tr>
+      </thead>
+      <tbody>
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
             <td><%= urls[url].longURL %></td>
             <td>
-              <form method="GET" action="/urls/<%= url %>">
-                <button type="submit" class="btn btn-warning"> Edit </button>
-              </form>
-            </td>
+                <form method="GET" action="/urls/<%= url %>">
+                  <button type="submit" class="btn btn-warning"> Edit </button>
+                </form>
+           </td>
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
-                <button type="submit" class="btn btn-danger"> Delete </button>
+                <button type="submit" class="btn btn-danger">Delete</button>
               </form>
             </td>
           </tr>
-        <% } %>
-        <% } %>
-      </tbody>
-    </table>
+          <% } %>
+        </tbody>
+      </table>
+      <hr>
+      <a class="btn btn-primary" href="/urls/new">Create a New Short Link</a>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
